--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,21 @@
-.idea
+# Packages
+node_modules/
+.yarn/*
+!.yarn/releases
+!.yarn/plugins
+.pnp.*
+
+# Log files
+logs/
+*.log
+
+# Miscellaneous
+.tmp/
+.vscode/
+.idea/
+docs/docs.json
+typings/index.js
 .DS_Store
+
+# Environments
+.env
