--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,5 +5,6 @@ services:
     container_name: baac-lotto-notify
     environment:
       - NODE_ENV=production
+      - TZ=Asia/Bangkok
     env_file:
       - ./.env
