--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bacclotto-notify",
+  "name": "bacc-lotto-notify",
   "version": "2.0.0",
   "main": "index.ts",
   "repository": "https://github.com/RNCAT/BaacLotto-Notify.git",
@@ -13,21 +13,21 @@
   "dependencies": {
     "axios": "^0.27.2",
     "cheerio": "1.0.0-rc.12",
-    "dotenv": "^16.0.2",
+    "dotenv": "^16.0.3",
     "node-cron": "^3.0.2",
-    "puppeteer": "^17.1.3"
+    "puppeteer": "^19.2.2"
   },
   "devDependencies": {
-    "@types/node": "^18.7.18",
-    "@types/node-cron": "^3.0.4",
-    "@typescript-eslint/eslint-plugin": "^5.37.0",
-    "@typescript-eslint/parser": "^5.37.0",
-    "eslint": "^8.23.1",
+    "@types/node": "^18.11.9",
+    "@types/node-cron": "^3.0.5",
+    "@typescript-eslint/eslint-plugin": "^5.42.1",
+    "@typescript-eslint/parser": "^5.42.1",
+    "eslint": "^8.27.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.2",
     "prettier": "^2.7.1",
-    "tsx": "^3.9.0",
-    "typescript": "^4.8.3"
+    "tsx": "^3.12.1",
+    "typescript": "^4.8.4"
   }
 }
